Fix board owner name sometimes overflowing

--- a/src/styles/components/_board-preview.sass
+++ b/src/styles/components/_board-preview.sass
@@ -70,8 +70,8 @@
 
 	.ownedby
 		z-index: 1
+		white-space: nowrap
 		width: 100%
-		text-align: center
 		border-top-left-radius:  0px
 		border-top-right-radius: 0px
 		overflow: hidden
